--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ nav ul li a {
 }
 
 .text-service h3 {
+    text-align: center;
     margin-bottom: 1em;
     color: #149191;
     text-transform: uppercase;
