--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ footer {
 }
 
 .text-banner p {
+    font-size: 1.1em;
     line-height: 1.5em;
     color: rgb(64, 61, 61);
 }
@@ -246,6 +247,8 @@ footer {
     align-items: center;
     text-align: center;
     flex-direction: column;
+
+    margin-bottom: 4em;
 }
 
 
