--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+   
 }
 
 body {
@@ -53,7 +54,6 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
     margin-bottom: 4em;
 }
 
@@ -66,6 +66,10 @@ nav ul li a {
 }
 
 #box {
+    
+}
+
+.inline-box {
     max-width: 400px;
     display: flex;
     justify-content: center;
@@ -79,7 +83,7 @@ nav ul li a {
     box-shadow: 0px 1px 4px #005555;
 }
 
-.text-service h3 {
+#box h3 {
     text-align: center;
     margin-bottom: 1em;
     color: #149191;
@@ -92,7 +96,7 @@ nav ul li a {
     margin: 1em 0;
     background-color: red;
     max-width: 350px;
-    width: 280px;
+    width: 270px;
     height: 280px;
     margin-bottom: 1em;
 }
@@ -225,8 +229,10 @@ footer {
 .img-banner {
     background-image: url(../img/man-5583034_1920-removebg-preview.png);
     background-position: center center;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     width: 100vw;
+    max-height: 768px;
     height: 500px;
 }
 
