--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-   overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 body {
     width: 100vw;
     height: 100vh;
+    margin: 0;
 }
 
 /* CABEÇALHO */
