--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -88,7 +88,7 @@
         align-items: center;
         flex-direction: row;
 
-        border-bottom: 1px solid #005555;
+        border-bottom: 1px solid #25e5e555;
     }
 
     .section-b {
