--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 /* CABEÇALHO */
 
 header {
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,7 +25,6 @@ header {
     text-align: center;
 
     box-shadow: 0px 0px 8px #005555;
-    margin-bottom: 4em;
 }
 
 .logo-header img {
@@ -249,12 +249,13 @@ footer {
 }
 
 .section-d {
+    height:100%;
+    background-image: linear-gradient(to right, #00555579, #0055553c, white, white );
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: column;
-
     margin-bottom: 4em;
 }
 
