--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -87,6 +87,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: row;
+        height:600px;
 
         border-bottom: 1px solid #25e5e555;
     }
@@ -106,11 +107,12 @@
     }
 
     .text-banner h1 {
-        font-size: 2em;
+        font-size: 2.5em;
     }
 
     .img-banner {
         width: 30%;
+        height: 600px;
     }
 
     .flex-box1 {
