--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ footer {
     align-items: center;
     text-align: center;
     flex-direction: column;
-    background-color: #0055550e;
+    background-color: #00555527;
     
 }
 
@@ -250,7 +250,7 @@ footer {
 
 .section-d {
     height:100%;
-    background-image: linear-gradient(to right, #00555579, #0055553c, white, white );
+    background-image: linear-gradient(to right, #00555579, #0055553c,#00555512, white, white );
     display: flex;
     justify-content: center;
     align-items: center;
