--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header {
 }
 
 nav {
-    margin-bottom: 1em;
+    display: none;
 }
 
 nav ul li {
@@ -64,10 +64,6 @@ nav ul li a {
     color: #005555;
     text-shadow: 2px 2px 8px #00555572;
     margin-bottom: 2em;
-}
-
-#box {
-    
 }
 
 .inline-box {
@@ -239,7 +235,7 @@ footer {
 
 .text-banner h1 {
     color: #005555;
-    margin-bottom: .5em;
+    margin: 1em 0;
 }
 
 .text-banner p {
@@ -250,7 +246,7 @@ footer {
 
 .section-d {
     height:100%;
-    background-image: linear-gradient(to right, #00555579, #0055553c,#00555512, white, white );
+    
     display: flex;
     justify-content: center;
     align-items: center;
