--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -19,6 +19,10 @@
         display: none;
     }
 
+    nav {
+        display: block;
+    }
+
     nav ul li {
         margin: 0;
         display: inline-block;
@@ -75,6 +79,10 @@
 
     .menubar {
         display: none;
+    }
+
+    nav {
+        display: block;
     }
 
     nav ul li {
