--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -61,6 +61,9 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    margin: 0 auto;
+    
 }
 
 .text-form h1 {
@@ -72,11 +75,13 @@ nav ul li a {
 }
 
 .form {
+    border-radius: 10px;
     width: 100vw;
     height: auto;
     background-color: #00555527;
     padding: 2em;
     margin-bottom: 2em;
+    max-width: 1000px;
 }
 
 .form-group {
