--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -159,6 +159,7 @@
         margin: 2em;
         width: 300px;
         transition: .3s;
+        opacity: .9;
     }
 
     #box:hover {
@@ -166,6 +167,7 @@
         cursor: pointer;
         box-shadow: 0px 0px 12px #2ce5e5;
         transform: scale(1.05);
+        opacity: 1;
     }
 
     .section-b {
