--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ nav ul li a {
     margin-bottom: 2em;
     background-color: #00555509;
     border-radius: 10px;
-    box-shadow: 0px 0px 4px #005555;
+    box-shadow: 2px 4px 5px 0px #0055556b;
 }
 
 #box h3 {
