--- a/pages/orcamento/orcamento.css
+++ b/pages/orcamento/orcamento.css
@@ -67,6 +67,8 @@ nav ul li a {
 }
 
 .text-form h1 {
+    text-transform: uppercase;
+    margin-top: 2em;
     font-size: 2.2em;
     text-align: center;
     color: #005555;
