--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -150,9 +150,9 @@
     }
 
     .flex-box3 {
-        display: none;
+        display: flex;
+        flex-direction: row;
         justify-content: center;
-        align-items: center;
     }
 
     #box {
