--- a/pages/orcamento/orcamento.css
+++ b/pages/orcamento/orcamento.css
@@ -33,8 +33,10 @@ header {
     height: 100px;
 }
 
-.menubar {
-    color: #084949
+.menubar span {
+    color: #084949;
+    padding: .5em;
+    font-size: 2em;
 }
 
 nav {
