--- a/pages/quemsomos/quemsomos.css
+++ b/pages/quemsomos/quemsomos.css
@@ -92,7 +92,12 @@ nav ul li a {
     border-radius: 10px;
     background-color: #00555509;
     list-style-type: none;
+    box-shadow: 0px 0px 7px #00555556;
+    margin-bottom: 2em;
 }
+
+
+
 
 .lista ul li  {
     list-style-type: none;
@@ -103,6 +108,7 @@ nav ul li a {
        
     margin: 0 auto;
     max-width: 900px;
+    
     
 }
 
@@ -118,7 +124,7 @@ nav ul li a {
     padding: 1em;
     line-height: 1.8em;
     color: rgb(19, 13, 13);
-    text-align: center  ;
+    text-align: justify  ;
     text-indent: 30px;
 }
 
